# patina-child-slate

./: CHANGELOG.md  Cargo.toml  README.md  child.toml
.github/workflows/: release.yml
layer/: events.jsonl
layer/sessions/: 20260512-170906-759051000.md  20260601-100618-746170000.md
layer/slate/: events.jsonl
layer/slate/work/slate-observability-packet/: work.md  work.toml
layer/surface/epistemic/beliefs/: mother-owns-child-project-mounts.md
skills/slate-code/: SKILL.md
src/: control.rs  dependency_graph.rs  dispatch.rs  lib.rs  lifecycle.rs  model.rs  narrative.rs  runtime.rs  slate_body.rs  slate_native_tests.rs  spec_bridge.rs  store.rs  telemetry.rs  text.rs  work_commands.rs  work_fields.rs  work_views.rs
wit-contract/: slate.wit
