[package]
name = "patina-ai-child-slate-manager"
version = "0.2.1"
edition = "2021"
description = "Full-WIT Slate manager child scaffold for spec workflow parity"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.41.0"
patina-sdk = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"

[package.metadata.component]
package = "patina:slate-manager"

[package.metadata.component.target]
path = "wit"
world = "slate-manager"

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "wit/deps/logging/logging.wit" }
"patina:git" = { path = "wit/deps/git/git.wit" }
"patina:measure" = { path = "wit/deps/measure/measure.wit" }
"patina:slate" = { path = "wit/deps/slate/slate.wit" }

